implement some http requests

--- a/cfg/proc.cfg
+++ b/cfg/proc.cfg
@@ -3,12 +3,15 @@
         {
             "Alias" : "my_command",
             "Cmd" : "/home/<user>/<project>/bin",
-            "Args" : "-xvzf"
+            "Args" : "-xvzf",
+            "RestartAttempts" : 3
+
         },
         {
             "Alias" : "top",
             "Cmd" : "top",
-            "Args" : ""
+            "Args" : "",
+            "RestartAttempts" : 3
         }
     ]
 }
